--- a/index.html
+++ b/index.html
@@ -41,16 +41,13 @@
             <a class="nav-link js-scroll-trigger" href="#services">Initiatives</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Projects</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#team">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="https://github.com/dssatau">Repositories</a>
           </li>
         </ul>
       </div>
@@ -151,7 +148,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Team</h2>
+          <h2 class="section-heading text-uppercase">Contact</h2>
           <h3 class="section-subheading text-muted">Who manage this!</h3>
         </div>
       </div>
