--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Initiatives</a>
+            <a class="nav-link js-scroll-trigger" href="#initiatives">Initiatives</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://github.com/dssatau">Repositories</a>
@@ -66,7 +66,7 @@
   </header>
 
   <!-- Services -->
-  <section class="page-section" id="services">
+  <section class="page-section" id="Initiatives">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -144,7 +144,7 @@
   </section>
 
   <!-- Team -->
-  <section class="bg-light page-section" id="team">
+  <section class="bg-light page-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
