--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </header>
 
   <!-- Services -->
-  <section class="page-section" id="Initiatives">
+  <section class="page-section" id="initiatives">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
