--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   </section>
 
   <!-- Team -->
-  <section class="bg-light page-section" id="contact">
+  <section class="bg-dark page-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -232,18 +232,7 @@
     </div>
   </section> -->
 
-  <!-- Contact -->
-  <section class="page-section" id="contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">It'll be responded by a human.</h3>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
