--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome To Data Science Society!</div>
         <div class="intro-heading text-uppercase">We play with data</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#initiatives">Tell Me More</a>
       </div>
     </div>
   </header>
@@ -478,7 +478,7 @@
 
   <!-- Contact form JavaScript -->
   <script src="js/jqBootstrapValidation.js"></script>
-  
+
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
 
