--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-chalkboard-teacher fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Educational Workshops</h4>
           <p class="text-muted">We organise educational workshops to make data science education easy and accessible for people of all backgrounds.</p>
@@ -86,7 +86,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-microphone fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Data Talks</h4>
           <p class="text-muted">We organise data science talks for students to get real exposure by top industry and academic leaders.</p>
@@ -94,7 +94,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Independent Projects</h4>
           <p class="text-muted">Coming soon...</p>
