--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>2009-2011</h4>
                   <h4 class="subheading">Our Humble Beginnings</h4>
                 </div>
                 <div class="timeline-body">
@@ -144,7 +143,7 @@
   </section>
 
   <!-- Team -->
-  <section class="bg-dark page-section" id="contact">
+  <section class="bg-white page-section" id="contact">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
