updated with blogs

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://medium.com/@dssatau">Blog</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="https://github.com/dssatau">Repositories</a>
           </li>
         </ul>
@@ -94,10 +97,10 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fas fa-book-reader fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Independent Projects</h4>
-          <p class="text-muted">Coming soon...</p>
+          <h4 class="service-heading">Paper Reading</h4>
+          <p class="text-muted">We organise paper discussion sessions once or twice in a month to discuss important groundbreaking papers.</p>
         </div>
       </div>
     </div>
@@ -142,7 +145,7 @@
     </div>
   </section>
 
-  <!-- Team -->
+  <!-- Contact -->
   <section class="bg-white page-section" id="contact">
     <div class="container">
       <div class="row">
