--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <i class="fas fa-book-reader fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Paper Reading</h4>
-          <p class="text-muted">We organise paper discussion sessions once or twice in a month to discuss important groundbreaking papers.</p>
+          <p class="text-muted">We organise paper discussion sessions once or twice in a month to discuss groundbreaking papers.</p>
         </div>
       </div>
     </div>
