--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4 class="subheading">Our Humble Beginnings</h4>
+                  <h4 class="subheading">Our Beginning</h4>
                 </div>
                 <div class="timeline-body">
                   <p class="text-muted">We started with a hope to make data science education accesible for students of all levels and backgrounds.</p>
