added social url

--- a/index.html
+++ b/index.html
@@ -246,17 +246,17 @@
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
               <a href="#">
-                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/DSSAshoka">
                 <i class="fab fa-facebook-f"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
+              <a href="https://github.com/dssatau">
+                <i class="fab fa-github"></i>
               </a>
             </li>
           </ul>
