--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Data Science Society, Ashoka University</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <img src="img/logos/Data Science Society-logos_transparent.png" width="45" alt="" class="d-inline-block align-middle mr-2">
+      </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
