--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">Welcome To Data Science Society!</div>
         <div class="intro-heading text-uppercase">We play with data</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#initiatives">Tell Me More</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#initiatives">I'm curious</a>
       </div>
     </div>
   </header>
